--- a/pages/posts.html
+++ b/pages/posts.html
@@ -12,6 +12,9 @@
            
         </div>
     </div>
+    <di class="loader__wrapper">
+        <div class="loader load"></div>
+    </div>
     <script src="/js/const.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/posts.js"></script>
