--- a/pages/todos.html
+++ b/pages/todos.html
@@ -12,6 +12,10 @@
            
         </div>
     </div>
+    <di class="loader__wrapper">
+        <div class="loader load"></div>
+    </div>
+
     <script src="/js/const.js"></script>
     <script src="/js/utils.js"></script>
     <script src="/js/todos.js"></script>
